# gic-thca-2025

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  sample_input.txt
.github/workflows/: ci.yml
app/constants/: directions.py
scripts/: run_app.sh  run_test.sh
src/: main.py  settings.py  settings.toml  streamlit_app.py
src/application/: simulation.py
src/constants/: __init__.py  commands.py  directions.py
src/domain/: __init__.py  car.py  grid.py  interfaces.py  movement_strategies.py  parser.py
src/tests/: test_main.py
src/tests/test_application/: test_simulation.py
src/tests/test_domain/: test_car.py  test_command_parser.py  test_grid.py  test_movement_strategies.py
